[DEV][LoiNLT] Update features: fix error create user note store verify_token
